Deployment/node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: ehsam-task2
        image: haseemsaeed1/nodejs:2 
        ports:
        - containerPort: 3000
