Deployment/networkpolicy-new.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: simple-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nodejs
    ports:
    - protocol: TCP
      port: 27017
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: nodejs
    ports:
    - protocol: TCP
      port: 3000
